<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="Register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select">Select item</string>
    <string name="moroccan_cuisine">Moroccan cuisine</string>
    <string name="choice_1">choice</string>
    <string name="choice_2" />
    <string name="choice_3" />
</resources>