<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image3"
    android:gravity="center"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="275dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/akaya_telivigala"
        android:gravity="center"
        android:text="@string/Register"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="377dp"
            android:layout_height="58dp"
            android:hint="@string/email"
            android:shadowColor="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
        tools:ignore="UnknownId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="377dp"
            android:layout_height="55dp"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="191dp"
        android:layout_height="53dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#21110F"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/Register"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tabsil"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <ImageView
        android:id="@+id/tabsil"
        android:layout_width="56dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/tabsil"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/loginNow"
        app:layout_constraintVertical_bias="0.835"
        tools:ignore="MissingConstraints"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@+id/btn_register" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tabsil"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/akaya_telivigala"
        android:text="Or"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/loginNow"
        app:layout_constraintVertical_bias="0.445"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="180dp" />

    <Button
        android:id="@+id/loginNow"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="#21110F"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/click_to_login"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/tabsil"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="401dp"
        android:layout_height="248dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/image6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>